# frugalAI_front

./: LICENSE  Makefile  README.md  app.py  dockerfile  pyproject.toml
pages/: 2project.py  3team.py
