[project]
name = "frugalai-front"
version = "0.1.0"
description = ""
authors = [
    {name = "chiara lodi",email = "chiara.lodi1995@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.43.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
