[tool.poetry]
name = "frugalai-front"
version = "0.1.0"
description = "Frontend for FrugalAI application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
streamlit = ">=1.43.2,<2.0.0"
requests = ">=2.32.3,<3.0.0"
pandas = ">=2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
